# joy

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  helix.toml  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  cli.rs  completions.rs  config.rs  engine_cache.rs  environment.rs  git_cache.rs  install.rs  lib.rs  main.rs  manifest.rs  profile.rs  project.rs  releases.rs  toolchain.rs  toolchain_meta.rs  types.rs  util.rs
src/engine_cache/: checksum.rs  symlinks.rs  urls.rs
src/git_cache/: checkout.rs
tests/: e2e.rs
