[package]
name = "dartup"
description = "sculpting Dart/Flutter toolchains with light."
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
zip = "2.2"
xdg = "3.0"
colored = "3.0"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "2.0"
git2 = "0.21.0"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
serial_test = "3.5.0"
