[package]
name = "joy"
description = "sculpting Dart/Flutter toolchains with light"
version = "0.1.0"
edition = "2024"
authors = ["Abdulwahab <ab22593k@gmail.com>"]
repository = "https://github.com/organiqlabs/joy"
homepage = "https://github.com/organiqlabs/joy"
license = "MIT"

[features]
e2e = []

[workspace]
members = ["."]

[workspace.metadata.dist]
cargo-dist-version = "0.28.2"
installers = ["shell", "powershell"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
ci = ["github"]
unstable = ["private-network"]

[[test]]
name = "e2e"
path = "tests/e2e.rs"
required-features = ["e2e"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
bstr = "1.12.3"
tar = "0.4.46"
flate2 = "1.1.9"
xz2 = "0.1.7"
zip = "8.6.0"
xdg = "3.0.0"
colored = "3.1.1"
indicatif = "0.18.6"
anyhow = "1.0.103"
thiserror = "2.0.18"
sha2 = "0.11.0"
hex = "0.4"
gix = { version = "0.85.0", features = ["blocking-network-client", "progress-tree", "blocking-http-transport-reqwest-rust-tls"] }
tokio = { version = "1.52.3", features = ["rt", "macros"] }

[dev-dependencies]
serial_test = "3.5.0"
